# jjava

./: .gitignore  DEV-GUIDE.md  NOTICE.txt  README.md  RELEASE-NOTES.md  build.gradle  install-snapshot.sh  jitpack.yml  pom.xml  pyproject.toml  settings.gradle  snapshot-install.sh
.github/workflows/: deploy-pypi.yml  maven.yml  prepare-release.yml  release-prepare.yml  release.yml
assembly/zip/: install.py  kernel.json  launcher.py  zip.xml
buildSrc/src/main/resources/: kernel.json
docs/: display.md  kernel.md  magics.md
jjava/: pom.xml
jjava-distro/: pom.xml
jjava-distro/assembly/: zipped-kernel.xml
jjava-jupyter/: pom.xml
jjava-kernel/: pom.xml
jjava-launcher/: pom.xml
jjava-maven/: pom.xml
jjava/assembly/: kernelspec.xml
jjava/assembly/zip/: install.py  kernel.json  launcher.py  zip.xml
jjava/src/main/java/org/dflib/jjava/: Env.java  JJava.java  JJavaExtension.java  JJavaKernel.java  JJavaKernelBuilder.java  JavaKernel.java
jjava/src/main/resources/: jjava-kernel-metadata.json
jjava/src/test/java/org/dflib/jjava/: JavaKernelTest.java
jjava/src/test/resources/: test-ping.jshell  test-pom.xml
jupyter-jvm-basekernel/: pom.xml
kernelspec/java/: kernel.json
launcher/: pom.xml
src/main/java/org/dflib/jjava/: Env.java  Extension.java  ExtensionLoader.java  ExtensionLoadingMaster.java  JJava.java  JavaKernel.java
src/main/java/org/dflib/jjava/execution/: CodeEvaluator.java  CodeEvaluatorBuilder.java  CompilationException.java  EvaluationInterruptedException.java  JJavaLoaderDelegate.java  (+4 more)
src/main/resources/: jjava-jshell-init.jshell
(+301 files in other folders)
